--- a/webapp/home/static/home/css/requests.css
+++ b/webapp/home/static/home/css/requests.css
@@ -1,6 +1,13 @@
 hr {
   margin: 5rem 0;
 }
+.m-10 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+.mt-10 {
+  margin-top: 5rem;
+}
 .mb-10 {
   margin-bottom: 5rem;
 }
