Add quota request form

--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -44,7 +44,7 @@
         Need more data storage on Galaxy Australia? Just ask!
       </p>
       <br>
-      <a class="ga-btn" href="/request/data">
+      <a class="ga-btn" href="/request/quota">
         Request data quota
       </a>
     </div>
