Tool request validation and mail html templating

--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -114,6 +114,18 @@ section {
   margin-left: 0;
   margin-right: 0;
 }
+.container-centered {
+  /*
+  For content centered on full
+  page e.g. success/confirmation
+  page */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 85vh;
+}
 
 /* Components */
 .tile {
