--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -30,7 +30,7 @@
       <p class="text-large">
         Thousands of tools are waiting to be installed from the
         <a href="https://toolshed.g2.bx.psu.edu/" target="_blank">Galaxy Toolshed</a>,
-        and our team are developing even more.
+        and our team are busy developing more.
       </p>
       <br>
       <a class="ga-btn" href="/request/tool">
