--- a/webapp/home/templates/home/requests/tool.html
+++ b/webapp/home/templates/home/requests/tool.html
@@ -43,15 +43,14 @@
     <div class="row mb-10">
       <div class="col-md-6">
         <label for="nameInput" class="form-label">Name</label>
+        {{ form.name.errors }}
         <input class="form-control" id="nameInput" type="text" name="name"
         value="{{form.name.value|default_if_none:''}}" required>
-        <div class="invalid-feedback">
-          Please enter your name.
-        </div>
       </div>
 
       <div class="col-md-6">
         <label for="emailInput" class="form-label">Email</label>
+        {{ form.email.errors }}
         <input class="form-control" id="emailInput" type="text" name="email"
         value="{{form.email.value|default_if_none:''}}"
         aria-describedby="emailHelp" required
@@ -59,17 +58,16 @@
         <div id="emailHelp" class="form-text">
           We may contact you to request further detail.
         </div>
-        <div class="invalid-feedback">
-          Please enter an email address.
-        </div>
       </div>
     </div>
 
     <div class="mb-10">
       <p> Is your request for a new tool or a new dataset on Galaxy Australia?</p>
+      {{ form.resource_type.errors }}
       <div class="form-check">
         <input class="form-check-input" type="radio" value="tool"
           name="resource_type" id="resourceToolRadio" required
+          {% if form.resource_type.value == 'tool' %}checked{% endif %}
         >
         <label class="form-check-label" for="resourceToolRadio">
           Tool
@@ -78,6 +76,7 @@
       <div class="form-check">
         <input class="form-check-input" type="radio" value="dataset"
           name="resource_type" id="resourceDatasetRadio" required
+          {% if form.resource_type.value == 'dataset' %}checked{% endif %}
         >
         <label class="form-check-label" for="resourceDatasetRadio">
           Dataset
@@ -86,6 +85,7 @@
     </div>
 
     <div class="main">
+
       <!-- Tool/dataset specific section toggled by javascript -->
 
       <!-- Tool-specific -->
@@ -101,6 +101,7 @@
             <label for="toolshedAvailableInput" class="form-check-label">
               Is the requested tool available on the Galaxy Toolshed?
             </label>
+            {{ form.tool_toolshed_url.errors }}
             <div id="toolshedAvailableHelp" class="form-text">
               The
               <a href="https://toolshed.g2.bx.psu.edu/" target="_blank">Galaxy Toolshed</a>
@@ -143,6 +144,7 @@
           <label for="testDataInput" class="form-check-label">
             Do you have data that we can use to test this tool?
           </label>
+          {{ form.tool_test_data.errors }}
           <div id="testDataHelp" class="form-text">
             Test data will help us to validate and test this tool more quickly.
           </div>
@@ -153,6 +155,7 @@
 
       <div class="mb-10">
         <label for="resourceNameInput" class="form-label">Please provide the name and version of the requested resource</label>
+        {{ form.resource_name_version.errors }}
         <input class="form-control" id="resourceNameInput" type="text"
           name="resource_name_version"
           value="{{form.resource_name_version.value|default_if_none:''}}"
@@ -171,6 +174,7 @@
           <span class="tool-yes">URL for the software code</span>
           <span class="data-yes">URL of the specified resource</span>
         </label>
+        {{ form.resource_url.errors }}
         <input class="form-control" id="resourceUrlInput" type="text"
           name="resource_url"
           value="{{form.resource_url.value|default_if_none:''}}"
@@ -188,6 +192,7 @@
 
       <div class="mb-10">
         <label for="justificationInput" class="form-label">Justification for this resource</label>
+        {{ form.resource_justification.errors }}
         <textarea class="form-control" id="justificationInput" name="resource_justification"
           aria-describedby="justificationHelp" rows="4" required
         >{{form.resource_justification.value|default_if_none:''}}</textarea>
@@ -206,7 +211,8 @@
           How many researchers are you aware of across Australia who also require
           access to this reference dataset on Galaxy Australia?
         </label>
-        <input class="form-control" id="researchCountInput" type="text"
+        {{ form.resource_research_count.errors }}
+        <input class="form-control" id="researchCountInput" type="number"
           name="resource_research_count"
           value="{{form.resource_research_count.value|default_if_none:''}}"
           aria-describedby="researchCountHelp"
@@ -226,6 +232,7 @@
         <label for="resourceGroupsInput" class="form-label">
           Please list the names of research groups you are aware of across Australia who also require access to this software (or software update) on Galaxy Australia
         </label>
+        {{ form.resource_research_groups.errors }}
         <input class="form-control" id="resourceGroupsInput" type="text"
           name="resource_research_groups"
           value="{{form.resource_research_groups.value|default_if_none:''}}"
@@ -244,13 +251,13 @@
 
       <!-- Dataset-specific -->
       <div class="mb-10 data-yes">
-        <label for="contactConsentInput" class="form-label">
+        <input class="form-check-input" id="contactConsentInput" type="checkbox"
+          name="dataset_contact_consent"
+          {% if form.dataset_contact_consent.value %}checked{% endif %}
+        >
+        <label for="contactConsentInput" class="form-check-label">
           Can we contact you if we require more details about this dataset?
         </label>
-        <input class="form-control" id="contactConsentInput" type="text"
-          name="dataset_contact_consent"
-          value="{{form.dataset_contact_consent.value|default_if_none:''}}"
-        >
       </div>
       <!-- End dataset specific -->
 
@@ -306,4 +313,16 @@
 
 
 {% block onload %}
+
+// Trigger show elements if form populated
+$('input[type="radio"]:checked').click();
+$('input[type="checkbox"]:checked').click();
+
+$('.errorlist') && setTimeout(function() {
+  window.scrollTo({
+    top: $('.errorlist').offset().top - 100,
+    left: 0,
+  })
+}, 500);
+
 {% endblock %}
