--- a/webapp/home/static/home/css/requests.css
+++ b/webapp/home/static/home/css/requests.css
@@ -35,7 +35,7 @@ span.material-icons {
 }
 .request-buttons p {
   display: block;
-  height: 50px;
+  height: 4rem;
 }
 .form-check-label {
   margin-left: 1rem;
