--- a/webapp/home/templates/home/requests/success.html
+++ b/webapp/home/templates/home/requests/success.html
@@ -4,13 +4,13 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'home/css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'home/css/requests.css' %}">
 {% endblock %}
 
 
 {% block content %}
-<main class="container-flex justify-content-center align-items-center my-5 py-5">
-  <div class="text-center my-5">
+<main class="container-centered">
+  <div class="text-center">
     <h2> Thanks for your submission </h2>
 
     <p> We'll get back to you as soon as possible. </p>
