Configure mail dispatch for webforms

--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -17,7 +17,9 @@
     <div class="col">
       <h1><span class="material-icons">help</span></h1>
       <p class="text-large">
-        Need some assistance? The Galaxy Australia team are here to help.
+        Need some assistance?
+        <br>
+        The Galaxy Australia team are here to help.
       </p>
       <br>
       <a class="ga-btn" href="/request/support">
@@ -29,19 +31,21 @@
       <h1><span class="material-icons">construction</span></h1>
       <p class="text-large">
         Thousands of tools are waiting to be installed from the
-        <a href="https://toolshed.g2.bx.psu.edu/" target="_blank">Galaxy Toolshed</a>,
-        and our team are busy developing more.
+        <a href="https://toolshed.g2.bx.psu.edu/" target="_blank">Galaxy Toolshed</a>.
+        You can also request additions (e.g. genomes) to Galaxy's reference datasets.
       </p>
       <br>
       <a class="ga-btn" href="/request/tool">
-        Request new tool
+        Request tool/dataset
       </a>
     </div>
 
     <div class="col">
       <h1><span class="material-icons">save</span></h1>
       <p class="font-lg">
-        Need more data storage on Galaxy Australia? Just ask!
+        Need more data storage on Galaxy Australia?
+        <br>
+        Just ask!
       </p>
       <br>
       <a class="ga-btn" href="/request/quota">
