--- a/webapp/home/templates/home/requests/support.html
+++ b/webapp/home/templates/home/requests/support.html
@@ -19,7 +19,7 @@
   </p>
 
   <form method="post">
-    
+
     {% csrf_token %}
 
     <div class="row mb-10">
@@ -37,7 +37,8 @@
           aria-describedby="emailHelp" required
         >
         <div id="emailHelp" class="form-text">
-          We may contact you to request further detail.
+          We may contact you to request further detail. If possible, please use
+          your Galaxy login email.
         </div>
       </div>
     </div>
