--- a/deploy/ansible/roles/webapp/templates/gunicorn.py.j2
+++ b/deploy/ansible/roles/webapp/templates/gunicorn.py.j2
@@ -1,7 +1,7 @@
 """Add a worker for each available CPU.
 
-Most requests are handled quickly, so 1 worker should be able to handle many
-requests per second.
+Most requests are handled quickly, so 2 workers should be able to handle many
+requests per second and allows one worker to have momentary blocks.
 """
 
 workers = {{ gunicorn.web_workers }}
