Fix permissions for better web security

--- a/deploy/ansible/roles/webapp/templates/webapp.service.j2
+++ b/deploy/ansible/roles/webapp/templates/webapp.service.j2
@@ -5,7 +5,7 @@ After=network.target
 
 [Service]
 PIDFile=/run/gunicorn/pid
-User = ubuntu
+User = www-data
 Group = www-data
 RuntimeDirectory=gunicorn
 WorkingDirectory={{ web_root }}
