People page: don't display email row if null

--- a/webapp/people/templates/people/index.html
+++ b/webapp/people/templates/people/index.html
@@ -33,6 +33,7 @@
 
             <div class="card-text">
               <table>
+                {% if p.email %}
                 <tr>
                   <td>
                     <i class="fas fa-envelope"></i>
@@ -43,6 +44,7 @@
                     </a>
                   </td>
                 </tr>
+                {% endif %}
 
                 {% if p.github %}
                 <tr>
