Add "unpublished bubble" to unpublished items in admin UI

--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -160,6 +160,25 @@ section {
 i {
   margin: 0 .5rem;
 }
+.unpublished-bubble {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 42px;
+  height: 42px;
+  margin: 0;
+  padding: 4px 10px;
+  color: red;
+  font-size: 1.25rem;
+  display: block;
+  transform: translate(-75%, -75%);
+  background: salmon;
+  border-radius: 50%;
+}
+.unpublished-bubble span.material-icons {
+  margin: 0;
+  vertical-align: middle;
+}
 
 /* Font */
 a {
