--- a/webapp/events/templates/events/event.html
+++ b/webapp/events/templates/events/event.html
@@ -19,6 +19,10 @@
 
     <div class="row">
       <div class="col">
+        {% if not event.is_published %}
+        {% include 'home/snippets/unpublished-bubble.html' %}
+        {% endif %}
+        
         <h3> {{ event.title }} </h3>
 
         {% if event.organiser_name %}
