--- a/webapp/events/templates/events/index.html
+++ b/webapp/events/templates/events/index.html
@@ -47,6 +47,9 @@
             {% for item in events %}
             <tr>
               <td>
+                {% if not item.is_published %}
+                {% include 'home/snippets/unpublished-bubble.html' %}
+                {% endif %}
                 <a href="{{ item.url }}" {% if item.external %} target="_blank" {% endif %}>
                   <h4 class="markdown"> {{ item.title|markdown|safe }} </h4>
                 </a>
