--- a/webapp/news/templates/news/index.html
+++ b/webapp/news/templates/news/index.html
@@ -37,6 +37,9 @@
           {% for item in news_items %}
           <tr>
             <td>
+              {% if not item.is_published %}
+              {% include 'home/snippets/unpublished-bubble.html' %}
+              {% endif %}
               <a href="{{ item.url }}" {% if item.external %} target="_blank" {% endif %}>
                 <h4 class="markdown"> {{ item.title|markdown|safe }} </h4>
               </a>
