--- a/webapp/home/templates/home/snippets/about/feature-catalogue.html
+++ b/webapp/home/templates/home/snippets/about/feature-catalogue.html
@@ -30,7 +30,7 @@
 
 <p>
   The inclusion of additional tools, reference genomes, and annotation data can be
-  <a href="#TODO">requested</a>.
+  <a href="/support">requested</a>.
 </p>
 
 
