--- a/webapp/home/templates/home/snippets/about/service-levels.html
+++ b/webapp/home/templates/home/snippets/about/service-levels.html
@@ -115,13 +115,13 @@
 
 <p>
   An increased data storage quota can be
-  <a href="#TODO">requested</a>
+  <a href="/support">requested</a>
   for a limited time period in special cases.
 </p>
 
 <p>
   If your data is likely to be used by other researchers, you may
-  <a href="#TODO">request</a>
+  <a href="/support">request</a>
   its addition to Galaxy Australia as reference or annotation data for community use. Reference and annotation data does not count towards your research data quota.
 </p>
 
