Remove redundant data-policy template

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -221,7 +221,7 @@
     <br>
 
     <p class="text-center">
-      <a class="ga-btn" href="/data-policy.html">
+      <a class="ga-btn" href="/about#data-privacy">
         Full data policy
       </a>
 
