Add "none" class to notices and toggle title show/hide

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -24,7 +24,13 @@
   <section class="container-fluid my-5" id="tagline">
 
     {% for notice in notices %}
+
+    {% if notice.notice_class == 'none' %}
+    <div class="container my-5">
+    {% else %}
     <div class="alert alert-{{ notice.notice_class }}">
+    {% endif %}
+
       {% if not notice.is_published %}
       {% include 'home/snippets/unpublished-bubble.html' %}
       {% endif %}
@@ -33,9 +39,10 @@
       <span class="material-icons">{{ notice.material_icon }}</span>
       {% endif %}
 
+      {% if notice.display_title %}
       <strong> {{ notice.title }} </strong>
-
       <br>
+      {% endif %}
 
       {{ notice.body|markdown|safe }}
     </div>
