--- a/webapp/home/templates/home/snippets/unpublished-bubble.html
+++ b/webapp/home/templates/home/snippets/unpublished-bubble.html
@@ -2,7 +2,7 @@
   class="unpublished-bubble"
   data-bs-toggle="tooltip"
   data-bs-placement="left"
-  title="This notice is unpublished"
+  title="This content is unpublished - it is only visible to admin users"
 >
   <span class="material-icons">visibility_off</span>
 </div>
