Update about page button color

--- a/webapp/home/static/home/css/about.css
+++ b/webapp/home/static/home/css/about.css
@@ -38,7 +38,7 @@ main {
 }
 .about-nav button.active {
   color: #eee;
-  background: dodgerblue;
+  background: var(--color);
   cursor: default;
 }
 .about-nav button:not(.active):hover {
