Refactor landing page to include tiias link

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -201,56 +201,53 @@
     </div>
   </section>
 
+  <section id="tiias">
+    <h4 class="header"> Training Infrastructure as a Service (TIaaS) </h4>
+
+    <div class="row">
+      <div class="col">
+        <p>
+          Are you looking to run bioinformatics training using the Galaxy
+          service? We provide free infrastructure for hosting Galaxy training
+          events, so your participants experience the fastest possible job times.
+          Don't let a job queue ruin your workshop!
+        </p>
+      </div>
+
+      <div class="col">
+        <p class="text-center">
+          <a class="ga-btn" href="https://usegalaxy.org.au/tiaas" target="_blank">
+            Learn more
+          </a>
+          <br>
+          <a class="ga-btn" href="https://usegalaxy.org.au/tiaas/new" target="_blank">
+            Enquire now
+          </a>
+        </p>
+      </div>
+    </div>
+  </section>
+
   <section id="data-policy">
     <h4 class="header"> Our data policy </h4>
 
-    <h5> Registered users <span class="material-icons">account_circle</span> </h5>
+    <div class="row">
+      <div class="col">
+        <p>
+          Your data limits on Galaxy Australia depend on how you register with
+          the service. We provide greater privileges to
+          <a href="/about#list-of-institutions">Australian Researchers</a>.
+        </p>
+      </div>
 
-    <p>
-      User data on usegalaxy.org.au (i.e. datasets, histories) is stored for a
-      <b>minimum of 1 year</b> (52 weeks) unless deleted by the user. Datasets will be permanently removed within 5 days of deletion by the user. If
-      the user "purges" the dataset in the Galaxy, it will be removed immediately,
-      permanently.
-    </p>
-
-    <p>
-      Users are allocated a <b>100GB</b> disk quota upon registration. Users registratered
-      with an Australian research institute address are allocated <b>600GB</b>.
-    </p>
-
-    <p>
-      An extended quota can be
-      <a href="/support">requested</a>
-      for a limited time period in special cases.
-    </p>
-
-    <hr>
-
-    <h5> Unregistered users <span class="material-icons">no_accounts</span></h5>
-
-    <p>
-      Processed data will only be accessible during one browser session, using a
-      cookie to identify your data. This cookie is not used for any other purposes
-      (e.g. tracking or analytics.)
-    </p>
-
-    <p>
-      If the user does not access usegalaxy.org.au within 5 days, those datasets will be permanently deleted.
-    </p>
-
-    <br>
-
-    <p class="text-center">
-      <a class="ga-btn" href="/about#data-privacy">
-        Full data policy
-      </a>
-
-      <br>
-
-      <a class="ga-btn" href="https://galaxy-au-training.github.io/tutorials/modules/galaxy-data/">
-        Downloading and deleting my data
-      </a>
-    </p>
+      <div class="col">
+        <p class="text-center">
+          <a class="ga-btn" href="/about#data-privacy">
+            Read our data policy
+          </a>
+        </p>
+      </div>
+    </div>
   </section>
 
 </main>
